feat(order): get order by reference